--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ dependencies {
     testImplementation (
             'com.codeborne:selenide:7.3.3',
             'org.junit.jupiter:junit-jupiter:5.9.3',
-            'org.slf4j:slf4j-simple:2.0.7')
+            'org.slf4j:slf4j-simple:2.0.7',
+            'io.qameta.allure:allure-selenide:2.28.1')
 }
 
 test {
